# fastfuck

./: .gitignore  Cargo.toml  LICENSE  dist-workspace.toml
.cargo/: config.toml
src/: main.rs
